{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 141,
  "lineage": "f174b43d-bccb-ba69-906e-12704104f755",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8083"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-27T01:58:13.154-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "Allow Google health check probes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kafka-2-bq-streaming-demo/global/firewalls/cdc-demo-allow-health-checks",
            "log_config": [],
            "name": "cdc-demo-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc",
            "params": [],
            "priority": 900,
            "project": "kafka-2-bq-streaming-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/firewalls/cdc-demo-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "cdc-demo-allow-health-checks",
            "project": "kafka-2-bq-streaming-demo"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "8083",
                  "9092",
                  "9093"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-08-27T01:58:13.148-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "Allow internal TCP traffic for CDC pipeline services",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kafka-2-bq-streaming-demo/global/firewalls/cdc-demo-allow-internal",
            "log_config": [],
            "name": "cdc-demo-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc",
            "params": [],
            "priority": 1000,
            "project": "kafka-2-bq-streaming-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/firewalls/cdc-demo-allow-internal",
            "source_ranges": [
              "10.0.1.0/24",
              "10.8.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "cdc-demo-allow-internal",
            "project": "kafka-2-bq-streaming-demo"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.232.128.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-08-27T01:58:13.219-07:00",
            "deletion_policy": "DELETE",
            "description": "Reserved IP range for Private Service Access (Cloud SQL)",
            "effective_labels": {
              "env": "demo",
              "goog-terraform-provisioned": "true",
              "managed_by": "terraform",
              "project": "cdc-pipeline-demo"
            },
            "id": "projects/kafka-2-bq-streaming-demo/global/addresses/cdc-demo-psa-range",
            "label_fingerprint": "4nFgAoi4fJk=",
            "labels": {
              "env": "demo",
              "managed_by": "terraform",
              "project": "cdc-pipeline-demo"
            },
            "name": "cdc-demo-psa-range",
            "network": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc",
            "prefix_length": 20,
            "project": "kafka-2-bq-streaming-demo",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/addresses/cdc-demo-psa-range",
            "terraform_labels": {
              "env": "demo",
              "goog-terraform-provisioned": "true",
              "managed_by": "terraform",
              "project": "cdc-pipeline-demo"
            }
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "cdc-demo-psa-range",
            "project": "kafka-2-bq-streaming-demo"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "description": "Custom VPC for CDC streaming pipeline",
            "enable_ula_internal_ipv6": false,
            "id": "projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc",
            "mtu": 0,
            "name": "cdc-demo-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "9148149935410135776",
            "numeric_id": "9148149935410135776",
            "project": "kafka-2-bq-streaming-demo",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "cdc-demo-vpc",
            "project": "kafka-2-bq-streaming-demo"
          },
          "dependencies": [
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-08-27T01:58:14.849-07:00",
            "deletion_policy": "DELETE",
            "description": "Primary subnet for CDC pipeline compute and managed services",
            "gateway_address": "10.0.1.1",
            "id": "projects/kafka-2-bq-streaming-demo/regions/europe-west1/subnetworks/cdc-demo-subnet-europe-west1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "cdc-demo-subnet-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/global/networks/cdc-demo-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kafka-2-bq-streaming-demo",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kafka-2-bq-streaming-demo/regions/europe-west1/subnetworks/cdc-demo-subnet-europe-west1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1272823095
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "cdc-demo-subnet-europe-west1",
            "project": "kafka-2-bq-streaming-demo",
            "region": "europe-west1"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    }
  ]
}